[FIX] website: fix visible cookies bar container
Steps to reproduce:

- Enable the "Cookies bar" in website configuration > Go to website
(Edit mode).
- Select the cookies bar > Change its layout to "Popup" > The modal
container becomes visible in edit mode only.

The `#website_cookies_bar` element will automatically get one line
height (equivalent to its current `line-height` value) because of the
`contenteditable="true"` added to it, which makes it visible in edit
mode (The container has this default height in all layouts, but it's
hidden by the cookies bar content in "Discrete" and "Classic" modes).

The goal of this commit is to simply hide this element to prevent this
behaviour.

Remark: The same issue occurred on a `.s_popup` parent with an inner
`.modal` element and was fixed in [1] by keeping their visibility
synchronized.

[1]: https://github.com/odoo/odoo/commit/cfd53b8fae3ad9f677df49a03fe6d2945dbb5da2

linked to opw-3485565

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1591,6 +1591,9 @@ $ribbon-padding: 100px;
 
 // Cookies Bar
 #website_cookies_bar {
+    min-height: 0px;
+    height: 0px;
+
     :not(.o_cookies_popup) {
         bottom: 0;
     }
